// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spartacus Digital-Payments schematics: ng-add Digital-Payments feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from \\"@commerce-storefront-toolset/core\\";
import { DigitalPaymentsModule } from \\"@commerce-storefront-toolset/digital-payments\\";
import { dpTranslationChunksConfig, dpTranslations } from \\"@commerce-storefront-toolset/digital-payments/assets\\";

@NgModule({
  declarations: [],
  imports: [
    DigitalPaymentsModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: dpTranslations,
      chunks: dpTranslationChunksConfig,
    },
  })]
})
export class DigitalPaymentsFeatureModule { }
"
`;

exports[`Spartacus Digital-Payments schematics: ng-add Digital-Payments feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from \\"@commerce-storefront-toolset/core\\";
import { dpTranslationChunksConfig, dpTranslations } from \\"@commerce-storefront-toolset/digital-payments/assets\\";

@NgModule({
  declarations: [],
  imports: [
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: dpTranslations,
      chunks: dpTranslationChunksConfig,
    },
  })
  ]
})
export class DigitalPaymentsFeatureModule { }
"
`;

exports[`Spartacus Digital-Payments schematics: ng-add Digital-Payments feature general setup should add the feature using the lazy loading syntax 2`] = `
"import { NgModule } from '@angular/core';
import { CheckoutModule } from \\"@commerce-storefront-toolset/checkout/base\\";
import { DigitalPaymentsModule } from \\"@commerce-storefront-toolset/digital-payments\\";

@NgModule({
  declarations: [],
  imports: [
    CheckoutModule,
    DigitalPaymentsModule
  ]
})
export class CheckoutWrapperModule { }
"
`;
